tooltip: quick fix - whitespace normal

--- a/core/less/dirty-to-refactor/overrides/bootstrap/tooltip.less
+++ b/core/less/dirty-to-refactor/overrides/bootstrap/tooltip.less
@@ -2,6 +2,7 @@
 .tooltip {
   font-weight: bold;
   z-index: 2 * @zindex-tooltip;
+  white-space: normal;
 
   .tooltip-small {
     font-style: italic;
